syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemCostList.proto";

message AvatarExpUpCsReq {
	ItemCostList use_item_list = 4;
	uint32 base_avatar_id = 1;
}