syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "PileItem.proto";

message ItemCost {
	oneof itemCase_ {		PileItem PileItem = 6;
		uint32 EquipmentUniqueId = 2;
		uint32 RelicUniqueId = 14;
	}
}