syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemList.proto";

message ScenePlaneEventScNotify {
	ItemList HGKMPLEMCKC = 6;
	ItemList get_item_list = 13;
	ItemList IBDCNJHEHHH = 5;
	ItemList DFOMENDHKLM = 2;
}